-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b105
-
Verified
There are two problems as I see it. First, we are holding some kind of lock when trying to print the exception:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/173654.dmitrij/s/hotspot/src/share/vm/runtime/javaCalls.cpp:57), pid=16852, tid=16868
# assert(!thread->owns_locks()) failed: must release all locks when leaving VM
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-24-173654.dmitrij.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-24-173654.dmitrij.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /export/local/aurora/sandbox/results/workDir/closed/java/lang/ProcessBuilder/ModifyListArgs/core.16852)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x00007f783994b000,0x00007f7839a4c000], sp=0x00007f7839a49e00, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1412275] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x155
V [libjvm.so+0x1412f9f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0x979a0d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0xc6e704] JavaCallWrapper::JavaCallWrapper(methodHandle, Handle, JavaValue*, Thread*)+0xa4
V [libjvm.so+0xc73e20] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0xa00
V [libjvm.so+0xc703d5] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x6c5
V [libjvm.so+0xc70b5f] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xbf
V [libjvm.so+0xc7dcb3] java_lang_Throwable::print_stack_trace(Handle, outputStream*)+0x5a3
V [libjvm.so+0xd9dda2] JVMCICompiler::abort_on_pending_exception(Handle, char const*, bool)+0x82
V [libjvm.so+0xd9e1ad] JVMCICompiler::compile_method(methodHandle const&, int, JVMCIEnv*)+0x36d
V [libjvm.so+0x8f17f5] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xeb5
V [libjvm.so+0x8f1f98] CompileBroker::compiler_thread_loop()+0x478
V [libjvm.so+0x137c679] JavaThread::thread_main_inner()+0x1c9
V [libjvm.so+0x137c91f] JavaThread::run()+0x20f
V [libjvm.so+0x10fbe82] java_start(Thread*)+0xd2
C [libpthread.so.0+0x7851]
The other problem is an exception throw in com.oracle.graal.replacements.ReplacementsImpl.<clinit>:
java.lang.ExceptionInInitializerError
at com.oracle.graal.replacements.ReplacementsImpl.<clinit>(ReplacementsImpl.java:312)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createReplacements(AMD64HotSpotBackendFactory.java:155)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createBackend(AMD64HotSpotBackendFactory.java:119)
at com.oracle.graal.hotspot.HotSpotGraalRuntime.<init>(HotSpotGraalRuntime.java:109)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:75)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:38)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.getCompiler(HotSpotJVMCIRuntime.java:184)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.compileMethod(HotSpotJVMCIRuntime.java:228)
Caused by: java.security.AccessControlException: access denied ("java.util.PropertyPermission" "*" "read,write")
at java.security.AccessControlContext.checkPermission(AccessControlContext.java:468)
at java.security.AccessController.checkPermission(AccessController.java:894)
at java.lang.SecurityManager.checkPermission(SecurityManager.java:541)
at java.lang.SecurityManager.checkPropertiesAccess(SecurityManager.java:1253)
at java.lang.System.getProperties(System.java:632)
at com.oracle.graal.debug.Debug.parseMetricAndTimerSystemProperties(Debug.java:1415)
at com.oracle.graal.debug.Debug.<clinit>(Debug.java:1372)
at com.oracle.graal.replacements.ReplacementsImpl.<clinit>(ReplacementsImpl.java:312)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createReplacements(AMD64HotSpotBackendFactory.java:155)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createBackend(AMD64HotSpotBackendFactory.java:119)
at com.oracle.graal.hotspot.HotSpotGraalRuntime.<init>(HotSpotGraalRuntime.java:109)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:75)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:38)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.getCompiler(HotSpotJVMCIRuntime.java:184)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.compileMethod(HotSpotJVMCIRuntime.java:228)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/173654.dmitrij/s/hotspot/src/share/vm/runtime/javaCalls.cpp:57), pid=16852, tid=16868
# assert(!thread->owns_locks()) failed: must release all locks when leaving VM
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-24-173654.dmitrij.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-24-173654.dmitrij.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /export/local/aurora/sandbox/results/workDir/closed/java/lang/ProcessBuilder/ModifyListArgs/core.16852)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Stack: [0x00007f783994b000,0x00007f7839a4c000], sp=0x00007f7839a49e00, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1412275] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x155
V [libjvm.so+0x1412f9f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0x979a0d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0xc6e704] JavaCallWrapper::JavaCallWrapper(methodHandle, Handle, JavaValue*, Thread*)+0xa4
V [libjvm.so+0xc73e20] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0xa00
V [libjvm.so+0xc703d5] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x6c5
V [libjvm.so+0xc70b5f] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0xbf
V [libjvm.so+0xc7dcb3] java_lang_Throwable::print_stack_trace(Handle, outputStream*)+0x5a3
V [libjvm.so+0xd9dda2] JVMCICompiler::abort_on_pending_exception(Handle, char const*, bool)+0x82
V [libjvm.so+0xd9e1ad] JVMCICompiler::compile_method(methodHandle const&, int, JVMCIEnv*)+0x36d
V [libjvm.so+0x8f17f5] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xeb5
V [libjvm.so+0x8f1f98] CompileBroker::compiler_thread_loop()+0x478
V [libjvm.so+0x137c679] JavaThread::thread_main_inner()+0x1c9
V [libjvm.so+0x137c91f] JavaThread::run()+0x20f
V [libjvm.so+0x10fbe82] java_start(Thread*)+0xd2
C [libpthread.so.0+0x7851]
The other problem is an exception throw in com.oracle.graal.replacements.ReplacementsImpl.<clinit>:
java.lang.ExceptionInInitializerError
at com.oracle.graal.replacements.ReplacementsImpl.<clinit>(ReplacementsImpl.java:312)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createReplacements(AMD64HotSpotBackendFactory.java:155)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createBackend(AMD64HotSpotBackendFactory.java:119)
at com.oracle.graal.hotspot.HotSpotGraalRuntime.<init>(HotSpotGraalRuntime.java:109)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:75)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:38)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.getCompiler(HotSpotJVMCIRuntime.java:184)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.compileMethod(HotSpotJVMCIRuntime.java:228)
Caused by: java.security.AccessControlException: access denied ("java.util.PropertyPermission" "*" "read,write")
at java.security.AccessControlContext.checkPermission(AccessControlContext.java:468)
at java.security.AccessController.checkPermission(AccessController.java:894)
at java.lang.SecurityManager.checkPermission(SecurityManager.java:541)
at java.lang.SecurityManager.checkPropertiesAccess(SecurityManager.java:1253)
at java.lang.System.getProperties(System.java:632)
at com.oracle.graal.debug.Debug.parseMetricAndTimerSystemProperties(Debug.java:1415)
at com.oracle.graal.debug.Debug.<clinit>(Debug.java:1372)
at com.oracle.graal.replacements.ReplacementsImpl.<clinit>(ReplacementsImpl.java:312)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createReplacements(AMD64HotSpotBackendFactory.java:155)
at com.oracle.graal.hotspot.amd64.AMD64HotSpotBackendFactory.createBackend(AMD64HotSpotBackendFactory.java:119)
at com.oracle.graal.hotspot.HotSpotGraalRuntime.<init>(HotSpotGraalRuntime.java:109)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:75)
at com.oracle.graal.hotspot.HotSpotGraalCompilerFactory.createCompiler(HotSpotGraalCompilerFactory.java:38)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.getCompiler(HotSpotJVMCIRuntime.java:184)
at jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.compileMethod(HotSpotJVMCIRuntime.java:228)
- relates to
-
JDK-8145435 [JVMCI] some tests on Windows fail with: assert(!thread->is_Java_thread()) failed: must not be java thread
-
- Closed
-
-
JDK-8146933 replace java_lang_Throwable::print_stack_trace with java_lang_Throwable::java_printStackTrace
-
- Closed
-